# ukui-samba-config

./: .gitignore  CMakeLists.txt  README.md  global.h  peony-samba-service.cpp  polkit-helper.cpp  samba-config.cpp  samba-config.h  test-auth.cpp
data/: data.cmake  org-ukui-samba-config.service  org.ukui.samba.config.conf  org.ukui.samba.config.policy  org.ukui.samba.share.config.policy  org.ukui.samba.share.config.service
src/: org.ukui.samba.config.xml  polkit-helper.cpp  polkit-helper.h  samba-config-interface.cpp  samba-config-interface.h  samba-config.cpp  samba-config.h
test/: test-auth.cpp
